# this-is-editor

./: .gitignore  .prettierrc.json  AGENT.md  LICENSE  README.md  conftest.py  eslint.config.js  index.html  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  runner.py  vite.config.mts  vitest.config.ts  vitest.setup.ts
.github/workflows/: main.yml
LICENSES/: Nuitka  PyGObject-stubs  a2wsgi  annotated-types  anyio  appdirs  black  bottle  click  docstring-to-markdown  fastapi  h11  idna  importlib_metadata  jedi  mypy_extensions  packaging  parso  pathspec  platformdirs  pluggy  psutil  pydantic  pydantic_core  python-lsp-jsonrpc  python-lsp-server  pywebview  sniffio  starlette  typing-inspection  typing_extensions  ujson  uvicorn  watchfiles  websockets  zipp  zstandard
doc/bugs_tomb/: 2026-02-19-pywebview-state-proxy-crash.md  README.md
docs/: PROJECT_STRUCTURE.md  README_zh-Hans.md
pysrc/: config.py  config_meta.py  js_api.py  judge.py  langs.py  models.py  runner.py  user_data.py  utils.py  watch.py  web.py
src/: App.vue  ace-theme-tie-light.ts  ace-theme-tie.ts  components.d.ts  lsp.ts  main.ts  pywebview-defines.ts  typed-router.d.ts
src/components/: CheckerPanel.vue  EditorPage.vue  FileSelPage.vue  LicensesPage.vue  SettingPage.vue  file-sel-create.ts
src/composables/editor/: index.ts  useAceEditor.ts  useEditorClipboard.ts  useEditorContextMenu.ts  useEditorFileSync.ts  useEditorFormat.ts  useEditorKeyboard.ts  useEditorLsp.ts  useEditorScreenshot.ts  useEditorTheme.ts
src/i18n/: en-US.ts  zh-Hans.ts
src/layouts/: default.vue
src/pages/: editor.vue  file-sel.vue  index.vue  license.vue  setting.vue
src/plugins/: i18n.ts  index.ts
src/services/: index.ts
src/services/base/: api-client.ts  cache.ts  error-handler.ts
src/services/modules/: code-service.ts  config-service.ts  file-service.ts  task-service.ts
src/stores/: checker.ts  editor.ts  file.ts  index.ts
src/styles/: ace-theme-github.css  ace-theme-gruvbox.css  ace-theme.css
tests/backend/unit/: smoke_test.py  test_config.py  test_js_api.py  test_judge.py  test_path_hashes.py  test_runner.py
tests/frontend/unit/: CheckerPanel.test.ts  EditorPage.test.ts  checkerStore.test.ts  editorStore.test.ts  fileSelCreate.test.ts  fileStore.test.ts  lsp.test.ts  services.test.ts  smoke.test.ts  test-env.d.ts  useAceEditor.test.ts  useEditorClipboard.test.ts  useEditorContextMenu.test.ts  useEditorFileSync.test.ts  useEditorFormat.test.ts  useEditorKeyboard.test.ts  useEditorLsp.test.ts  useEditorScreenshot.test.ts  useEditorTheme.test.ts
tools/: builder.py  gen_license.py
