[project]
name = "this-is-editor"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2wsgi>=1.10.10",
    "appdirs>=1.4.4",
    "fastapi>=0.116.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pywebview[gtk]>=6.0 ; sys_platform == 'linux'",
    "pywebview[qt]>=6.0 ; sys_platform == 'win32'",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]


[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pip-licenses>=5.0.0",
    "python-lsp-server>=1.13.1",
]

[tool.ruff]
# 启用 pyright 的类型检查规则
select = [
    "E",   # 启用 pycodestyle 错误
    "F",   # 启用 Pyflakes
    "I",   # 启用 isort
    "UP",  # 启用 pyupgrade
    "PYI", # 启用 flake8-pyi
    "RUF", # 启用 Ruff 特定规则
    "ANN", # 启用 flake8-annotations (类型注解)
    # "TCH", # 启用 flake8-type-checking
]
target-version = "py313"
